crates/taskfleet/tests/snapshots/envelope_snapshots__discussion_list_text.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
d-pqrstuvwxy	n-0001	open	discuss	seed topic
