crates/taskfleet/tests/snapshots/envelope_snapshots__discussion_resolve_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "discussion_id": "d-pqrstuvwxy",
    "node_id": "n-0001",
    "choice": "keep",
    "outcome": "appended",
    "seq": 4,
    "projections": [
      "discussions/d-pqrstuvwxy.json",
      "manifest.json"
    ]
  },
  "warnings": []
}
