crates/taskfleet/tests/snapshots/envelope_snapshots__discussion_show_not_found_error.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"discussion_not_found","message":"no discussion d-nopereport in run [RUN_ID]","invalid_value":"d-nopereport"}}
