crates/taskfleet/tests/snapshots/envelope_snapshots__event_create_dry_run_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "kind": "node.status",
    "node_id": "n-0001",
    "dry_run": true,
    "projections": [
      "nodes/n-0001.json"
    ]
  },
  "warnings": []
}
