crates/taskfleet/tests/snapshots/envelope_snapshots__event_create_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "kind": "node.created",
    "node_id": "n-1000",
    "seq": 3,
    "projections": [
      "nodes/n-1000.json",
      "manifest.json"
    ]
  },
  "warnings": []
}
