crates/taskfleet/tests/snapshots/envelope_snapshots__event_create_text.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
run-id:      [RUN_ID]
kind:        node.created
node-id:     n-1002
seq:         5
projections:
  - nodes/n-1002.json
  - manifest.json
