crates/taskfleet/tests/snapshots/envelope_snapshots__event_create_unknown_kind_error.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 233
expression: value
---
{"schema_version":1,"error":{"code":"unknown_event_kind","message":"unknown event kind: bogus.kind","invalid_value":"bogus.kind","expected":["run.created","run.status","node.created","node.status","node.report","node.awaiting_input","node.input_resolved","child.spawned","supervisor.attached","supervisor.cursor_advanced","supervisor.exited","supervisor.reattach-requested","orchestrator.decision","discuss.critical"]}}
